# tauri-react-vite-boilerplate

./: babel.config.js  jest.config.js  package.json  readme.md
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-vite/: index.html  index.tsx  vite.config.js
src-vite/components/: exampleapp.tsx
src-vite/tests/: router.spec.tsx
src-vite/tests/__snapshots__/: exampleapp.spec.tsx.snap  start.spec.tsx.snap
