[package]
name = "tauri-react-vite-boilerplate"
version = "0.0.0"
description = "Tauri React Vite Boilerplate"
authors = [ "shamofu" ]
license = "MIT"
repository = "https://github.com/shamofu/tauri-react-vite-boilerplate.git"
default-run = "tauri-react-vite-boilerplate"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "tauri-react-vite-boilerplate"
path = "src/main.rs"
